Nav fixes + scrollbar

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -332,7 +332,26 @@ nav {
     overflow-y: scroll;
     margin-left: -718px;
     padding-right: 7px;
-    text-align: right;
+
+    /* width */
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+        background: #f1f1f1;
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        background: #888;
+    }
+
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }
 
     ul {
         list-style: none;
@@ -357,11 +376,15 @@ nav {
             }
 
             &.tag-h2 {
-                font-size: 1.2em;
+                padding-left: 5px;
 
                 a {
-                    color: #333;
+                    font-weight: bold;
                 }
+            }
+
+            &.tag-h3 {
+                padding-left: 10px;
             }
         }
 
